fix: remove double underline from article links and fix search box z-index
Article links were displaying both browser default underline and custom
:after pseudo-element underline. Added text-decoration: none to base
link style to show only the custom animated underline effect.

Search box dropdown was appearing behind article links due to insufficient
z-index values. Increased z-index to 9999 for .stork-wrapper, .stork-output,
and [data-stork="sitesearch-output"] to ensure search results always appear
on top.

--- a/static/css/links.css
+++ b/static/css/links.css
@@ -8,6 +8,7 @@ article
   color: black;
   display: inline-block;
   position: relative;
+  text-decoration: none;
   &:after {
     position: absolute;
     top: 100%;
