--- a/static/css/stork.css
+++ b/static/css/stork.css
@@ -20,11 +20,16 @@
   --stork-results-border-color: var(--stork-border-color);
 }
 
+[data-stork="sitesearch-output"] {
+  z-index: 9999 !important;
+}
+
 .stork-wrapper {
   position: relative;
   font-family: var(--stork-font-family);
   box-sizing: border-box;
   font-size: 1em * var(--stork-size-multiplier);
+  z-index: 9999;
 }
 
 .stork-wrapper *,
@@ -70,7 +75,7 @@
   border-radius: var(--stork-results-border-radius);
   display: flex;
   flex-direction: column;
-  z-index: 100;
+  z-index: 9999;
   color: var(--stork-results-title-color);
   font-weight: 400;
   font-family: var(--stork-font-family);
